# AgenticMCP

./: .gitignore  CLAUDE.md  INTEGRATION_TEST_RESULTS.md  LICENSE  README.md  notes.md  notes_v2.md  pyproject.toml  task_plan.md  task_plan_v2.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
backend/: config.py  dependencies.py  main.py
backend/api/v1/: __init__.py  auth.py  orders.py  products.py  users.py
backend/auth/: jwt.py
backend/database/: connection.py
backend/database/repositories/: __init__.py  order_repo.py  product_repo.py  user_repo.py
backend/models/: __init__.py  auth.py  common.py  order.py  product.py  user.py
backend/services/: __init__.py  data_masking.py
backend/utils/: __init__.py  logger.py
config/: permissions.yaml
docker/: Dockerfile  Dockerfile.backend  Dockerfile.mcp  Makefile  README.md  docker-compose-v2.yml  docker-compose.dev.yml  docker-compose.yml  init.sql
examples/: claude_desktop_config.json  inspector_config.json
scripts/: generate_token.py  init_db.py
src/agenticmcp/: __init__.py  client.py  config.py  database.py  permissions.py  server.py
src/agenticmcp/tools/: __init__.py  query.py  tables.py
tests/: __init__.py  test_database.py  test_permissions.py  test_server.py
